--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,10 +22,14 @@ jobs:
       -
         id: install
         run: yarn install
-        run: yarn build
+        
       -
         id: lint
         run: yarn lint
+      
+      -
+      id: lint
+      run: yarn build
       
       
 
