--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,8 +28,8 @@ jobs:
         run: yarn lint
       
       -
-      id: lint
-      run: yarn build
+        id: build
+        run: yarn build
       
       
 
