--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,6 +19,8 @@ jobs:
         with:
           node-version: '14'
           cache: 'yarn'
+        env: # Or as an environment variable
+          super_secret: ${{ secrets.SuperSecret }}
       -
         id: install
         run: yarn install
