--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,7 +31,9 @@ jobs:
       -
         id: build
         env: # Or as an environment variable
-          GATSBY_ALGOLIA_APP_ID: ${{ secrets.INDEX }}
+          GATSBY_ALGOLIA_APP_ID: ${{ secrets.ID }}
+          GATSBY_ALGOLIA_SEARCH_KEY: ${{ secrets.SEARCH}}
+          ALGOLIA_ADMIN_KEY: ${{ secrets.AD}}
         run: yarn build
       
       
